fix body overflow after click on menu btn

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,14 @@ body {
   overflow-x: hidden;
 }
 
+body.modalOpened {
+  overflow-y: hidden;
+}
+
+body.modalOpened .root {
+  overflow: hidden;
+}
+
 .container {
   width: 1200px;
   max-width: 1200px;
